# pacinet

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  OVERVIEW.md  PACINET_FAMILY.md  PROMPT_HISTORY.md  README.md  REQUIREMENTS.md
.github/workflows/: ci.yml
docs/: MARKET_RESEARCH.md  PACINET_PACGATE_OPTION_MAP.md
docs/images/: logo_ascii.txt
examples/: canary-rollout.yaml  ddos-auto-escalate.yaml
pacinet-agent/: Cargo.toml
pacinet-agent/src/: lib.rs  main.rs  pacgate.rs  service.rs
pacinet-cli/: Cargo.toml
pacinet-cli/src/: main.rs
pacinet-core/: Cargo.toml
pacinet-core/src/: error.rs  hash.rs  lib.rs  model.rs  storage.rs  tls.rs
pacinet-core/src/fsm/: definition.rs  error.rs  instance.rs  mod.rs
pacinet-proto/: Cargo.toml  build.rs
pacinet-proto/src/: lib.rs
pacinet-server/: Cargo.toml
pacinet-server/src/: config.rs  counter_cache.rs  counter_rate.rs  deploy.rs  events.rs  fsm_engine.rs  leader.rs  lib.rs  main.rs  metrics.rs  registry.rs  rest.rs  service.rs  webhook.rs
pacinet-server/src/storage/: memory.rs  mod.rs  schema.sql  sqlite.rs
pacinet-server/tests/: integration.rs  rest_integration.rs
pacinet-sim/: Cargo.toml  README.md
pacinet-sim/src/: main.rs  ui.html
pacinet-web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
pacinet-web/src/: App.tsx  index.css  main.tsx
pacinet-web/src/api/: client.ts
pacinet-web/src/components/audit/: AuditPage.tsx
pacinet-web/src/components/auth/: ApiKeyPrompt.tsx
pacinet-web/src/components/counters/: CounterRateChart.tsx  CountersPage.tsx
pacinet-web/src/components/dashboard/: DashboardPage.tsx  FsmSummary.tsx  RecentEvents.tsx  StatusChart.tsx
pacinet-web/src/components/deploy/: DeployPage.tsx  DryRunPreview.tsx
pacinet-web/src/components/fsm/: DefinitionList.tsx  FsmPage.tsx  InstanceDetail.tsx  InstanceList.tsx
pacinet-web/src/components/layout/: AlertRibbons.tsx  AppLayout.tsx  CommandPalette.tsx  Header.tsx  Sidebar.tsx
pacinet-web/src/components/nodes/: NodeDetail.tsx  NodeGrid.tsx  NodeRow.tsx  NodesPage.tsx
pacinet-web/src/components/templates/: TemplatesPage.tsx
pacinet-web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  FilterPresetManager.tsx  Spinner.tsx  Table.tsx
pacinet-web/src/components/wallboard/: WallboardPage.tsx
pacinet-web/src/components/watch/: WatchPage.tsx
pacinet-web/src/hooks/: useAnnotations.ts  useAudit.ts  useCounters.ts  useDeploy.ts  useEvents.ts  useFilterPresets.ts  useFleet.ts  useFsm.ts  useNodes.ts  useTemplates.ts  useWebhooks.ts
pacinet-web/src/lib/: utils.ts
pacinet-web/src/types/: api.ts
proto/: pacinet.proto
scripts/: gen-certs.sh
