[workspace]
resolver = "2"
members = [
    "pacinet-proto",
    "pacinet-core",
    "pacinet-server",
    "pacinet-agent",
    "pacinet-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Joe"]
license = "MIT"
repository = "https://github.com/joe/pacinet"

[workspace.dependencies]
# Internal crates
pacinet-proto = { path = "pacinet-proto" }
pacinet-core = { path = "pacinet-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC / Protobuf
tonic = { version = "0.12", features = ["tls"] }
tonic-web = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["net"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tonic-health = "0.12"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", features = ["http-listener"] }
