[package]
name = "pacinet-core"
version.workspace = true
edition.workspace = true

[dependencies]
pacinet-proto = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "tls12"] }
