[package]
name = "pacinet-server"
version.workspace = true
edition.workspace = true

[lib]
name = "pacinet_server"
path = "src/lib.rs"

[[bin]]
name = "pacinet-server"
path = "src/main.rs"

[dependencies]
pacinet-proto = { workspace = true }
pacinet-core = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
tokio = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
tonic-health = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
pacinet-agent = { path = "../pacinet-agent" }
tokio-stream = { workspace = true }
